<resources>
    <string name="app_name">ScrapShot</string>
    <string name="recycling_guide_header">Recycling 101</string>
    <string name="recycling_guide_paper_header">Paper</string>
    <string name="recycling_guide_paper_body">Paper makes up 25 percent of municipal solid waste (trash) generated each year, more than any other material. Americans recycled nearly 66 percent of the paper they used in 2017. This recovered paper is used to make new paper products, saving trees and other natural resources. Most community or office recycling programs accept paper and paper products. Check what your community or office program accepts before you put it in the bin. When you go shopping, look for products that are made from recycled paper.</string>
    <string name="recycling_guide_gift_wrap_header">Gift Wrap and Gift Bags</string>
    <string name="recycling_guide_gift_wrap_body">If you use gift wrap, look to find a type that can be recycled or that is made from recycled content. Consumers can also reduce waste by using decorative boxes that do not require wrapping and that can be recycled. A lot of gift wrap isn’t recyclable because of the coating on the paper, which is often shiny and laminated. However, check with your local recycling provider first to be certain and for the best ways to dispose of wrapping paper.</string>
    <string name="recycling_guide_batteries_header">Batteries</string>
    <string name="recycling_guide_batteries_body">Dry-Cell Batteries are used in a variety of electronics and include alkaline and carbon zinc (9-volt, D, C, AA, AAA), mercuric-oxide (button, some cylindrical and rectangular), silver-oxide and zinc-air (button), and lithium (9-volt, C, AA, coin, button, rechargeable) batteries. Look for in-store recycling bins or community collection events to dispose of these batteries.</string>
    <string name="recycling_guide_plastics_header">Plastics</string>
    <string name="recycling_guide_plastics_body">More than 35 million tons of plastics were generated in the United States in 2017, which was greater than 13 percent of the waste stream. Only 8.4 percent of plastics were recycled in 2017. Some types of plastics are recycled much more than others. Most community recycling programs accept some, but not all, types of plastics. Look for products made from recycled plastic materials.</string>
    <string name="recycling_guide_glass_header">Glass</string>
    <string name="recycling_guide_glass_body">Glass, especially glass food and beverage containers, can be recycled over and over again. In the United States in 2017, 11.4 million tons of glass were generated, 26.6 percent of which was recovered for recycling. Making new glass from recycled glass is typically cheaper than using raw materials. Most curbside community recycling programs accept different glass colors and types mixed together, and then glass is sorted at the recovery facility. Check with your local program to see if you need to separate your glass or if it can be mixed together.</string>
    <string name="recycling_guide_used_oil_header">Used Oil</string>
    <string name="recycling_guide_used_oil_body">Never dump your used motor oil down the drain — the used oil from one oil change can contaminate one million gallons of fresh water. By recycling your used oil you not only help keep our water supply clean, but help reduce American dependence on foreign oil. It takes 42 gallons of crude oil, but only one gallon of used oil, to produce 2.5 quarts of new motor oil. Many garages and auto-supply stores that sell motor oil also accept oil for recycling.</string>
    <string name="recycling_guide_source_link">Source: https://www.epa.gov/recycle/how-do-i-recycle-common-recyclables</string>
    <string name="title_activity_maps">RecyclingCenters</string>
    <string name="social_feed_title">Social Feed</string>
    <string name="social_feed_ID">User ID</string>
</resources>
